<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/gradient"
    tools:context="com.application.kopilena.ui.MainActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:rowCount="4" >

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_barang"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/barang"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cv_gradient"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_local_grocery_store_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/data_stok_barang"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_pelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/pelanggan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cv_gradient"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_person_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/data_pelanggan"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_pemesanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/pemesanan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cv_gradient"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_history_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/data_pemesanan"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_pembayaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:id="@+id/pembayaran"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/cv_gradient"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_baseline_store_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:text="@string/data_pembayaran"
                    android:textColor="@color/white"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</LinearLayout>